--- a/groups.yaml
+++ b/groups.yaml
@@ -1,4 +1,7 @@
   climate:
     name: Climate
     entities:
-      - sensor.ground_floor_temp
+      - sensor.office_temp
+      - sensor.office_humidity
+      - sensor.bedroom_temp
+      - sensor.office_humidity
