--- a/sensor.yaml
+++ b/sensor.yaml
@@ -1,42 +1,60 @@
   - platform: mqtt
-    state_topic: "sensor/ecfabc27d6ea"
+    state_topic: "sensor/2610922"
     name: 'Office temp'
     unit_of_measurement: "°C"
     value_template: "{{ value_json.temperature }}"
-    unique_id: "ecfabc27d6ea-temp"
+    unique_id: "2610922-temp"
     expire_after: 3600
     icon: mdi:thermometer
 
   - platform: mqtt
-    state_topic: "sensor/ecfabc27d6ea"
+    state_topic: "sensor/2610922"
     name: 'Office humidity'
     unit_of_measurement: "%"
     value_template: "{{ value_json.humidity }}"
-    unique_id: "ecfabc27d6ea-humidity"
+    unique_id: "2610922-humidity"
     expire_after: 3600
     icon: mdi:water-percent
 
   - platform: mqtt
-    state_topic: "sensor/500291c88b6e"
+    state_topic: "sensor/13142894"
     name: 'Bedroom temp'
     unit_of_measurement: "°C"
     value_template: "{{ value_json.temperature }}"
-    unique_id: "500291c88b6e-temp"
+    unique_id: "13142894-temp"
     expire_after: 3600
     icon: mdi:thermometer
 
   - platform: mqtt
-    state_topic: "sensor/500291c88b6e"
+    state_topic: "sensor/13142894"
     name: 'Bedroom humidity'
     unit_of_measurement: "%"
     value_template: "{{ value_json.humidity }}"
-    unique_id: "500291c88b6e-humidity"
+    unique_id: "13142894-humidity"
     expire_after: 3600
     icon: mdi:water-percent
 
   - platform: min_max
-    name: mean_temp
+    name: Mean temp second floor
     type: mean
     entity_ids:
       - sensor.office_temp
       - sensor.bedroom_temp
+
+  - platform: mqtt
+    state_topic: "sensor/13179970"
+    name: 'Livingroom temp'
+    unit_of_measurement: "°C"
+    value_template: "{{ value_json.temperature }}"
+    unique_id: "13179970-temp"
+    expire_after: 3600
+    icon: mdi:thermometer
+
+  - platform: mqtt
+    state_topic: "sensor/13179970"
+    name: 'Livingroom humidity'
+    unit_of_measurement: "%"
+    value_template: "{{ value_json.humidity }}"
+    unique_id: "13179970-humidity"
+    expire_after: 3600
+    icon: mdi:water-percent
