--- a/sensor.yaml
+++ b/sensor.yaml
@@ -58,3 +58,28 @@
     unique_id: "13179970-humidity"
     expire_after: 3600
     icon: mdi:water-percent
+
+  - platform: mqtt
+    state_topic: "sensor/13143391"
+    name: 'hallway temp'
+    unit_of_measurement: "°C"
+    value_template: "{{ value_json.temperature }}"
+    unique_id: "13143391-temp"
+    expire_after: 3600
+    icon: mdi:thermometer
+
+  - platform: mqtt
+    state_topic: "sensor/13143391"
+    name: 'hallway humidity'
+    unit_of_measurement: "%"
+    value_template: "{{ value_json.humidity }}"
+    unique_id: "13143391-humidity"
+    expire_after: 3600
+    icon: mdi:water-percent
+
+  - platform: min_max
+    name: Mean temp first floor
+    type: mean
+    entity_ids:
+      - sensor.livingroom_temp
+      - sensor.hallway_temp
