--- a/configuration.yaml
+++ b/configuration.yaml
@@ -20,10 +20,7 @@ no_ip:
   username: !secret noip_username
   password: !secret noip_password
 
-switch:
-  - platform: sonoff_lan_mode_r3
-    name: water switch
-    device_id: 1000905709
+sonoff:
 
 group: !include groups.yaml
 automation: !include automations.yaml
