--- a/automations.yaml
+++ b/automations.yaml
@@ -30,3 +30,24 @@
   - data: {}
     entity_id: switch.tradfri_outlet,switch.tradfri_outlet_2
     service: switch.turn_off
+- id: '1596559718243'
+  alias: Notify temp sensors out of battery
+  description: ''
+  trigger:
+  - entity_id: sensor.office_temp
+    platform: state
+    to: unknown
+  - entity_id: sensor.bedroom_temp
+    platform: state
+    to: unknown
+  - entity_id: sensor.livingroom_temp
+    platform: state
+    to: unknown
+  - entity_id: sensor.hallway_temp
+    platform: state
+    to: unknown
+  condition: []
+  action:
+  - data_template:
+      message: No temp value from {{ trigger.entity_id }}.
+    service: notify.mobile_app_hd1903
